--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,55 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [windows-latest, ubuntu-22.04, macos-latest]
-
-    runs-on: ${{ matrix.platform }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install dependencies (Ubuntu only)
-        if: matrix.platform == 'ubuntu-22.04'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: Install frontend dependencies
-        run: pnpm install
-
-      - name: Build Nuxt application
-        run: pnpm build
-
-      - name: Build Tauri application
-        uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tagName: ${{ github.ref_name }}
-          releaseName: 'EasytierGame ${{ github.ref_name }}'
-          releaseBody: 'See the assets to download and install this version.'
-          releaseDraft: true
-          prerelease: false
-
-  build-win7:
+  build-windows:
     runs-on: windows-latest
     
     steps:
@@ -72,8 +24,14 @@ jobs:
         with:
           version: 8
 
-      - name: Setup Rust
+      - name: Setup Rust stable
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Setup Rust nightly
+        uses: dtolnay/rust-toolchain@nightly
+
+      - name: Add Windows 7 target
+        run: rustup target add x86_64-win7-windows-msvc --toolchain nightly
 
       - name: Install frontend dependencies
         run: pnpm install
@@ -81,17 +39,53 @@ jobs:
       - name: Build Nuxt application
         run: pnpm build
 
-      - name: Build Tauri for Windows 7
+      - name: Build Windows 7 version
         run: |
-          cd src-tauri
-          cargo build --release
-          cd ..
+          rustup default nightly
+          pnpm tauri build -- -Z build-std --target x86_64-win7-windows-msvc
 
-      - name: Create Windows 7 release package
-        run: pnpm release-win7
+      - name: Build standard Windows version
+        run: |
+          rustup default stable
+          pnpm tauri build
+
+      - name: Copy additional files to release directory
+        run: |
+          xcopy /s /y /i src-tauri\easytier src-tauri\target\release\easytier
+          xcopy /y src-tauri\帮助.txt src-tauri\target\release\帮助.txt
+          xcopy /y src-tauri\uninstall.exe src-tauri\target\release\uninstall.exe
+
+      - name: Copy additional files to Windows 7 release directory
+        run: |
+          xcopy /y src-tauri\帮助.txt src-tauri\target\x86_64-win7-windows-msvc\release\帮助.txt
+          xcopy /y src-tauri\uninstall.exe src-tauri\target\x86_64-win7-windows-msvc\release\uninstall.exe
+          xcopy /s /y /i src-tauri\easytier src-tauri\target\x86_64-win7-windows-msvc\release\easytier
+
+      - name: Create release packages
+        run: |
+          pnpm run release
+          pnpm run release-win7
+
+      - name: Upload standard Windows artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: easytier-game-windows-x64
+          path: release/easytier-game_windows_x86_64_*.zip
 
       - name: Upload Windows 7 artifact
         uses: actions/upload-artifact@v4
         with:
-          name: easytier-game-win7
-          path: easytier-game-win7.zip
+          name: easytier-game-windows7
+          path: release/easytier-game_windows7_fix_*.zip
+
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            release/easytier-game_windows_x86_64_*.zip
+            release/easytier-game_windows7_fix_*.zip
+          draft: true
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
