--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,6 +50,7 @@ tauri-plugin-dialog = "2.6.0"
 # prost-types = "0.13"
 hashbrown = "0.16.1"
 # futures-util = "0.3"
+encoding_rs = "0.8.35"
 
 [dependencies.windows]
 version = "0.62.2"
